@@ -1,3 +1,7 @@
+2006-07-21 Jens Tkotz <jens@peino.de> 1.5.4-svn-b10
+
+ * Fix: drawSelect in slideshow misbehaved and selected the wrong transition.
+
 2006-07-12 Jens Tkotz <jens@peino.de> 1.5.4-svn-b9
 
  * Fix: Little warning in configwizard ; occured in first install.
